--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <div class="card">
         <div class="search-container">
         <input type="search" class="searchbar" placeholder="Search city">
-        <button class="searchbutton"><i class="fa-solid fa-magnifying-glass search-icon"></i></button>
+        <button type="button" class="searchbutton"><i class="fa-solid fa-magnifying-glass search-icon"></i></button>
         </div>
          
         <div class="temp">
             <i class="fa-solid fa-cloud-sun"></i>
             <h4>Temperature</h4>
-            <h1 id="temperature">32℃</h1>
-            <h3>Kurnool</h3>
+            <h1 class="temperature">32℃</h1>
+            <h3 class="city">Kurnool</h3>
         </div>
         
         <div class="weather">
             <div class="humidity">
             <i class="fa-solid fa-cloud-rain"></i>
-            <h3>60%</h3>
+            <h3 class="hum">60%</h3>
             <h4>Humidity</h4>
             </div>
 
             <div class="windspeed">
              <i class="fa-solid fa-wind"></i>
-             <h3>10 km/ph</h3>
+             <h3 class="windSpeed">10 km/ph</h3>
              <h4>Windspeed</h4>
 
             </div>
